sample-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-project
  namespace: registry
spec:
  selector:
    app: sample-project
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
