sample-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: sample.s1.getsoft.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-project
            port:
              number: 3000
  tls:
  - hosts:
    - sample.s1.getsoft.vn
    secretName: sample-tls
